--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -41,6 +41,7 @@ jobs:
       uses: peaceiris/actions-hugo@v2
       with:
           hugo-version: '0.109.0'
+          extended: true
 
     # Step 3 - Builds the site using Hugo
     - name: Build
